Fix spacing for cities search input

--- a/src/features/location-search/components/SearchItem/SearchItem.module.scss
+++ b/src/features/location-search/components/SearchItem/SearchItem.module.scss
@@ -6,11 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  row-gap: 1.5rem;
-}
-
-.name {
-  word-break: break-all;
+  column-gap: 1.2rem;
 }
 
 .icon {
