--- a/src/features/location-search/components/SearchModal/SearchModal.module.scss
+++ b/src/features/location-search/components/SearchModal/SearchModal.module.scss
@@ -24,7 +24,7 @@
   height: 100%;
   background-color: var(--color-background-medium);
   overflow: auto;
-  padding: 2rem 4.8rem 3rem;
+  padding: 2rem 3.33vw 3rem;
   display: grid;
   grid-template-columns: 100%;
   grid-auto-rows: max-content;
